Adding endpoint "library-exercises" via open-api(RapidAPI)
