# routes/workouts.js
@@ -2,8 +2,13 @@ require('dotenv').config();
 
 const express = require('express');
 const router = express.Router();
+const axios = require('axios');
 const checkAuth  = require('../middleware/check-auth');
 const Workout = require('../models/workout')
+
+//RapidAPI credentials
+const RAPIDAPI_KEY = '5732d73a31msh79a182b5fc37c1cp1bc776jsnee65b8029201';
+const RAPIDAPI_HOST = 'exercisedb.p.rapidapi.com';
 
 // Create Workout if the user is authenticated
 router.post('/:id', checkAuth, async (req, res, next) => {
@@ -88,6 +93,31 @@ router.get('/', checkAuth, async (req, res, next) => {
   }
 });
 
+//Fetch a library of exercises for the user to select exercises from open api 
+router.get('/library-exercises', checkAuth, async (req, res) => {
+  try {
+    const query = req.query.query || '';
 
+    const response = await axios.get('https://exercisedb.p.rapidapi.com/exercises', {
+      headers: {
+        'X-RapidAPI-Host': RAPIDAPI_HOST,
+        'X-RapidAPI-Key': RAPIDAPI_KEY,
+      },
+    });
+
+    const exercises = response.data;
+    const filteredExercises = exercises.filter(exercise =>
+      exercise.name.toLowerCase().includes(query.toLowerCase()) ||
+      exercise.bodyPart.toLowerCase().includes(query.toLowerCase()) ||
+      exercise.equipment.toLowerCase().includes(query.toLowerCase()) ||
+      exercise.target.toLowerCase().includes(query.toLowerCase())
+    );
+
+    res.status(200).json(filteredExercises);
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ message: 'An error occurred while fetching the exercises.' });
+  }
+});
 
 module.exports = router;
